welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: ')' expected but ':' found.
while (estSurMessage():Boolean:) {
                              ^BDRBuggle:50: error: illegal start of simple expression
	}
        ^